fixed unreadable colors in code blocks

--- a/notmyidea-cms/static/css/main.css
+++ b/notmyidea-cms/static/css/main.css
@@ -103,7 +103,15 @@ dl {margin: 0 0 1.5em 0;}
 dt {font-weight: bold;}
 dd {margin-left: 1.5em;}
 
-pre{background-color: #000; padding: 10px; color: #fff; margin: 10px; overflow: auto;}
+pre {
+	background-color: #f0f0f0;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 5px;
+	font-size: 13px;
+	font-family: Bitstream Vera Sans Mono,monospace;
+	margin: 10px; overflow: auto;
+}
 
 /* Quotes */
 blockquote {
